--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,30 +2,35 @@
 /* КЛАССЫ НАЧАЛЬНОЙ СТРАНИЦЫ */
 .body{
     background: #639643 url("img/test.jpg");
-    background-size: cover;
-    width: calc(1840 / 1840 * 100%);
-    height: 115vh;
-    flex-wrap: wrap;
-    margin: auto;
-    display: inline-block;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 100%;
+    min-height: 100%;
+    justify-content: flex-start;
+    text-align: center;
+    width: 95%;
+    margin-bottom: -10%;
 }
 .body a{display: inline}
 
 .menu{
     background-color: #71af4e;
     top: 0;
-    width: calc(1840 / 1840 * 100%);
-    height: 10vh;
+    height: 10%;
+    width: 500%;
     display: flex;
     justify-content:center;
+    align-items: center;
+    align-content: center;
     position: fixed;
 }
 
 .submenu{
     display: flex;
     position: fixed;
-    width: calc(1000 / 1840 * 100%);
-    height: 10vh;
+    width: 80%;
     justify-content: space-between;
     align-items: center;
 }
@@ -34,19 +39,20 @@ a { text-decoration: none}
 .name{
     color: aliceblue;
     font-family: 'Ubuntu', sans-serif;
-    width: 12vw;
-    min-width: 12vw;
-    max-width: 12vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    min-width: 33%;
+    max-width: 33%;
+    width: 33%;
     font-size: 1vw;
+    min-height: 100%;
+    max-height: 100%;
+    height: 100%;
 }
 .name:hover{background-color: rgba(255, 255, 255, 0);}
 
 .logo{
-    width: 2vw;
-    height: 4vh;
+    width: 10%;
+    min-width: 10%;
+    max-width: 10%;
 }
 .logo:hover{background-color: rgba(255, 255, 255, 0);}
 
@@ -57,12 +63,12 @@ a { text-decoration: none}
     padding: 1%;
     border: aliceblue;
     border-radius: 1vw;
-    width: 8vw;
-    min-width: 8vw;
-    max-width: 8vw;
-    min-height: 3vh ;
-    max-height: 3vh;
-    height: 3vh;
+    width: 12%;
+    min-width: 12%;
+    max-width: 12%;
+    min-height: 80% ;
+    max-height: 80%;
+    height: 80%;
     font-size: 1vw;
     text-align: center;
 }
@@ -79,19 +85,19 @@ a { text-decoration: none}
     padding: 1%;
     border: aliceblue;
     border-radius: 1vw;
-    width: 6vw;
-    min-width: 6vw;
-    max-width: 6vw;
-    min-height:3vh ;
-    max-height: 3vh;
-    height: 3vh;
+    width: 12%;
+    min-width: 12%;
+    max-width: 12%;
+    min-height: 80% ;
+    max-height: 80%;
+    height: 80%;
     font-size: 1vw;
     text-align: center;
 }
 .block:hover{
     color: #ffffff;
     background-color: rgba(240, 248, 255, 0.49);
-    padding: 8px;
+    padding: 1%;
     border: aliceblue;
     border-radius: 1vw;
 }
@@ -99,12 +105,12 @@ a { text-decoration: none}
 .dropdownMenu {
 
     display: inline-block;
-    width: 6vw;
-    min-width: 6vw;
-    max-width: 6vw;
-    min-height:10vh ;
-    max-height: 10vh;
-    height: 10vh;
+    width: 12%;
+    min-width: 12%;
+    max-width: 10%;
+    min-height: 80% ;
+    max-height: 80%;
+    height: 80%;
     align-items: center;
     font-size: 1vw;
 }
@@ -115,27 +121,21 @@ a { text-decoration: none}
     border: rgba(240, 248, 255, 0);
     border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
-    min-width: 6vw;
-    max-width: 6vw;
-    width: 6vw;
-    min-height:10vh ;
-    max-height: 10vh;
-    height: 10vh;
+    min-width: 100%;
+    max-width: 100%;
+    width: 100%;
+    min-height: 100% ;
+    max-height: 100%;
+    height: 100%;
     vertical-align: middle;
-    margin-left: auto;
-    margin-right: auto;
 
 }
 
 .img{
     border-radius: 100%; /* Радиус скругления */
-    width: 4vw;
-    min-width: 4vw;
-    max-width: 4vw;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%)
+    width: 40%;
+    min-width: 40%;
+    max-width: 40%;
 }
 
 .dropdownMenu-content {
@@ -144,32 +144,36 @@ a { text-decoration: none}
     background-color: aliceblue;
     padding: 1%;
     border-radius: 0 1% 1% 1%;
-    min-width: 10vw;
-    max-width: 10vw;
-    width: 10vw;
-    min-height:18vh ;
-    max-height: 18vh;
-    height: 18vh;
+    min-width: 10%;
+    max-width: 10%;
+    width: 10%;
+    min-height:20% ;
+    max-height: 20%;
+    height: 20%;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
     font-family: 'Ubuntu', sans-serif;
-    justify-content: left;
+    text-align: left;
 }
+
 .dropdownMenu-content a {
     color: #344f21;
-    padding: 8.5% 9%;
+    padding: 1%;
     text-decoration: none;
     display: block;
     background-color: rgba(255, 20, 147, 0);
-    width: 8vw;
-    min-width: 8vw;
-    max-width: 8vw;
-    min-height: 3vh ;
-    max-height: 3vh;
-    height: 3vh;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 30% ;
+    max-height: 30%;
+    height: 30%;
     font-size: 1vw;
+    text-align: center;
 }
-a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
+a:hover{
+    background-color: #bbbec4; border:#bbbec4; border-radius: 10px
+}
 .dropdownMenu:hover .dropdownMenu-content {
     display: block;
     position: fixed;
@@ -178,22 +182,14 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     background-color: aliceblue;
     border: aliceblue;
     border-radius: 5px 5px 0 0;
-    min-width: 6vw;
-    max-width: 6vw;
-    width: 6vw;
-    min-height:10vh ;
-    max-height: 10vh;
-    height: 10vh;
-    align-items: center;
-    justify-content: center;
 }
 
 
 .main{
     display: flex;
     position: fixed;
-    top: 35vh;
-    left: 24vw;
+    top: 30%;
+    left: 26%;
 }
 
 .subMain {
@@ -204,18 +200,20 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     border-radius: 10px;
     display: flex;
     position: fixed;
-    width: 50vw;
-    min-width: 50vw;
-    max-width:50vw;
-    min-height:35vh ;
-    max-height: 35vh;
-    height: 35vh;
+    width: 50%;
+    min-width: 30%;
+    max-width: 50%;
+    min-height:40% ;
+    max-height: 40%;
+    height: 40%;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
 }
 
 #text1 {
+    display: flex;
+    position: fixed;
     font-family: 'Ubuntu', sans-serif;
     color: aliceblue;
     font-size: 2vw;
@@ -226,19 +224,19 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 #text2 {
     display: flex;
     position: fixed;
-    top: 23vh;
+    top: 60%;
     background-color: aliceblue;
     color: #639643;
     padding: 2%;
     border: aliceblue;
     border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
-    width: 10vw;
-    min-width: 10vw;
-    max-width:10vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    width: 30%;
+    min-width: 30%;
+    max-width:30%;
+    min-height:10% ;
+    max-height: 10%;
+    height: 10%;
     font-size: 1vw;
     justify-content: center;
     align-items: center;
@@ -248,12 +246,16 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 
 .footer {
     background-color: aliceblue;
-    width: calc(1840 / 1840 * 100%);
-    position: absolute;
-    top: 105%;
-    height: 15vh;
+    position:  absolute;
+    top: 110vh;
     display: flex;
     justify-content:center;
+    height: 15%;
+    max-height: 15%;
+    min-height: 15%;
+    width: 103.9%;
+    align-items: center;
+    align-content: center;
 }
 
 .subFooter{
@@ -261,32 +263,48 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     align-items: center;
     white-space: nowrap;
     justify-content: space-between;
-    width: 95%;
+    width: 90%;
+    align-items: center;
 }
 .info {
     font-family: 'Ubuntu', sans-serif;
     color: #344f21;
     white-space: normal;
     display: inline-block;
-    width: 20vw;
+    width: 30%;
+    max-width: 30%;
+    min-width: 30%;
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
     vertical-align: top;
-    font-size: 2.5vh;
+    font-size: 1vw;
+    justify-content: center;
+    align-items: center;
 }
 .info1 {
     font-family: 'Ubuntu', sans-serif;
     color: #344f21;
     white-space: normal;
     display: inline-block;
-    width: 10vw;
+    width: 10%;
+    max-width: 10%;
+    min-width: 10%;
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
     vertical-align: top;
-    font-size: 2.5vh;
+    font-size: 1vw;
+    text-align: center;
+
+
+
 }
 .info1:hover{background-color: aliceblue}
 
 #img1 {
-    width: 1.8vw;
+    width: 20%;
     display: flex;
-    position: center;
     margin: 1vw ;
 }
 
@@ -294,22 +312,29 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 
 .gameBody{
     background: #e4e7ea;
-    background-size: cover;
-    width: calc(1840 / 1840 * 100%);
-    height: 115vh;
-    flex-wrap: wrap;
-    margin: auto;
-    display: inline-block;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 100%;
+    min-height: 100%;
+    justify-content: flex-start;
+    text-align: center;
+    width: 95%;
+    margin-bottom: -10%;
+    z-index: 1;
 }
 .gameBody a{display: inline}
 
 .gameMenu{
     background-color: aliceblue;
     top: 0;
-    width: calc(1840 / 1840 * 100%);
-    height: 10vh;
+    height: 10%;
+    width: 500%;
     display: flex;
     justify-content:center;
+    align-items: center;
+    align-content: center;
     position: fixed;
     z-index: 1;
 }
@@ -317,13 +342,13 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 .gameName {
     color: #344f21;
     font-family: 'Ubuntu', sans-serif;
-    width: 12vw;
-    min-width: 12vw;
-    max-width: 12vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    min-width: 33%;
+    max-width: 33%;
+    width: 33%;
     font-size: 1vw;
+    min-height: 100%;
+    max-height: 100%;
+    height: 100%;
 }
 .gameName:hover{background-color: rgba(255, 255, 255, 0);}
 
@@ -334,12 +359,12 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     padding: 1%;
     border: #71af4e;
     border-radius: 1vw;
-    width: 8vw;
-    min-width: 8vw;
-    max-width: 8vw;
-    min-height: 3vh ;
-    max-height: 3vh;
-    height: 3vh;
+    width: 12%;
+    min-width: 12%;
+    max-width: 12%;
+    min-height: 80% ;
+    max-height: 80%;
+    height: 80%;
     font-size: 1vw;
     text-align: center;
 }
@@ -356,12 +381,12 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     padding: 1%;
     border: aliceblue;
     border-radius: 1vw;
-    width: 6vw;
-    min-width: 6vw;
-    max-width: 6vw;
-    min-height:3vh ;
-    max-height: 3vh;
-    height: 3vh;
+    width: 12%;
+    min-width: 12%;
+    max-width: 12%;
+    min-height: 80% ;
+    max-height: 80%;
+    height: 80%;
     font-size: 1vw;
     text-align: center;
 }
@@ -375,12 +400,12 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 
 .gameDropdownMenu {
     display: inline-block;
-    width: 6vw;
-    min-width: 6vw;
-    max-width: 6vw;
-    min-height:10vh ;
-    max-height: 10vh;
-    height: 10vh;
+    width: 12%;
+    min-width: 12%;
+    max-width: 10%;
+    min-height: 80% ;
+    max-height: 80%;
+    height: 80%;
     align-items: center;
     font-size: 1vw;
 }
@@ -392,15 +417,13 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     border: rgba(240, 248, 255, 0);
     border-radius: 5px;
     font-family: 'Ubuntu', sans-serif;
-    min-width: 6vw;
-    max-width: 6vw;
-    width: 6vw;
-    min-height:10vh ;
-    max-height: 10vh;
-    height: 10vh;
+    min-width: 100%;
+    max-width: 100%;
+    width: 100%;
+    min-height: 100% ;
+    max-height: 100%;
+    height: 100%;
     vertical-align: middle;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .gameDropdownMenu-content {
@@ -409,31 +432,32 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     background-color: aliceblue;
     padding: 1%;
     border-radius: 0 1% 1% 1%;
-    min-width: 10vw;
-    max-width: 10vw;
-    width: 10vw;
-    min-height:18vh ;
-    max-height: 18vh;
-    height: 18vh;
+    min-width: 10%;
+    max-width: 10%;
+    width: 10%;
+    min-height:20% ;
+    max-height: 20%;
+    height: 20%;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
     font-family: 'Ubuntu', sans-serif;
-    justify-content: left;
+    text-align: left;
 }
 
 .gameDropdownMenu-content a{
     color: #344f21;
-    padding: 8.5% 9%;
+    padding: 1%;
     text-decoration: none;
     display: block;
     background-color: rgba(255, 20, 147, 0);
-    width: 8vw;
-    min-width: 8vw;
-    max-width: 8vw;
-    min-height: 3vh ;
-    max-height: 3vh;
-    height: 3vh;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 30% ;
+    max-height: 30%;
+    height: 30%;
     font-size: 1vw;
+    text-align: center;
 }
 a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 
@@ -442,33 +466,21 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     background-color: aliceblue;
     border: aliceblue;
     border-radius: 5px 5px 0 0;
-    min-width: 6vw;
-    max-width: 6vw;
-    width: 6vw;
-    min-height:10vh ;
-    max-height: 10vh;
-    height: 10vh;
-    align-items: center;
-    justify-content: center;
 }
 
 .gameMain{
     display: flex;
     position: absolute;
-    top: 20vh;
-    left: 24.5vw;
     flex-flow: column;
+    width: 50%;
+    top: 20vh;
+    left: 25vw;
 }
 
 .gameSubMain1 {
     background-color: aliceblue;
     display: flex;
-    width: 45.5vw;
-    max-width: 45.5vw;
-    min-width: 45.5vw;
-    height: 12vh;
-    max-height: 12vh;
-    min-height: 12vh;
+    height: 120%;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px 0 20px;
@@ -480,12 +492,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 .gameSubMain2 {
     background-color: aliceblue;
     display: flex;
-    width: 45.5vw;
-    max-width: 45.5vw;
-    min-width: 45.5vw;
-    height: 14vh;
-    max-height: 14vh;
-    min-height: 14vh;
+    height: 120%;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px 0 20px;
@@ -500,14 +507,12 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     font-family: 'Ubuntu', sans-serif;
     flex-direction: row;
     color: #344f21;
-    font-size: 3vh;
-    width: 12vw;
-    min-width: 12vw;
-    max-width: 12vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    font-size: 1.6vw;
+    width: 25%;
+    height: 40%;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .imgPlus{
@@ -526,13 +531,9 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     font-family: 'Ubuntu', sans-serif;
     flex-direction: row;
     color: #639643;
-    font-size: 3vh;
-    width: 12vw;
-    min-width: 12vw;
-    max-width: 12vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    font-size: 1.5vw;
+    width: 25%;
+    height: 40%;
     text-align: center;
     border-radius: 1vw;
     padding: 1vw;
@@ -548,16 +549,12 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     flex-direction: row;
     color: rgba(240, 248, 255, 0);
     background-color: rgba(220, 20, 60, 0);
-    font-size: 3vh;
+    font-size: 1.5vw;
     padding: 1vw;
     border: rgba(220, 20, 60, 0);
     border-radius: 1vw;
-    width: 8vw;
-    min-width: 8vw;
-    max-width: 8vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    width: 20%;
+    height: 40%;
     text-align: center;
 }
 .hiddenDelete:hover{
@@ -566,32 +563,11 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     border: crimson;
 }
 
-.profileMain{
-    display: flex;
-    position: absolute;
-    top: 21vh;
-    left: 21.5vw;
-    flex-flow: column;
-}
-
-.profileImg{
-    border-radius: 100%; /* Радиус скругления */
-    box-shadow: 0 0 7px rgba(102, 102, 102, 0); /* Параметры тени */
-    width: 13vw;
-    min-width: 13vw;
-    max-width: 13vw;
-
-
-}
 
 .profileMain1{
     display: flex;
-    width: 38vw;
-    min-width: 38vw;
-    max-width: 38vw;
-    min-height:25vh ;
-    max-height: 25vh;
-    height: 25vh;
+    width: 100%;
+    height: 50%;
     flex-flow: column;
     justify-content: space-between;
 
@@ -599,8 +575,8 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
 
 .profileMain2 {
     display: flex;
-    width: 40vw;
-    height: 10vh;
+    width: 95%;
+    height: 15%;
     justify-content: space-between;
     padding: 2vh;
     text-align: center;
@@ -613,34 +589,32 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     color: #344f21;
     font-size: 5vh;
     padding: 1vh;
+    text-align: left;
 }
 
 .profileMainColumn{
 
     display: flex;
     position: absolute;
-    top: 20vh;
-    left: 35.5vw;
-    width: 42vw;
-    height: 50vh;
+    top: 30%;
+    left: 30%;
+    width: 40%;
+    height: 50%;
     flex-flow: column;
     align-items: center;
     justify-content: space-between;
     background-color: aliceblue;
     border-radius: 1vw;
+    padding: 5px;
 }
 
 .defaultFixed {
     font-family: 'Ubuntu', sans-serif;
     flex-direction: row;
     color: #344f21;
-    font-size: 3vh;
-    width: 10vw;
-    min-width: 10vw;
-    max-width: 10vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    font-size: 1.2vw;
+    width: 25%;
+    height: 40%;
     padding: 1vh;
     text-align: center;
     background-color: #bbbec4;
@@ -654,7 +628,7 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     top: 15%;
     left: 35%;
     width: 500px;
-    height: 350px;
+    height: 300px;
     padding: 1vh;
     flex-flow: column;
     background-color: aliceblue;
@@ -675,8 +649,8 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     font-family: 'Ubuntu', sans-serif;
     color: #344f21;
     text-align: center;
-    font-size: 25px;
-    padding: 2%;
+    font-size: 20px;
+    padding: 1%;
     border: #344f21;
 }
 
@@ -718,46 +692,19 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     color: aliceblue;
     font-size: 20px;
     width: 50%;
-    height: 16%;
+    height: 15%;
     text-align: center;
     background-color: #639643;
     border: #e4e7ea;
     border-radius: 1vh;
-    padding: 1%;
 
-}
-
-.defaultReg {
-    font-family: 'Ubuntu', sans-serif;
-    flex-direction: row;
-    color: #344f21;
-    font-size: 30px;
-    width: 50%;
-    height: 15%;
-    text-align: center;
-}
-
-.auth1{
-    display: flex;
-    position: absolute;
-    top: 15%;
-    left: 35%;
-    width: 500px;
-    height: 400px;
-    padding: 1vh;
-    flex-flow: column;
-    background-color: aliceblue;
-    border: aliceblue;
-    border-radius: 1vw;
-    align-items: center;
-    justify-content: center;
 }
 
 .finder {
     font-family: 'Ubuntu', sans-serif;
     text-align: start;
     color: #344f21;
-    font-size: 2.2vw;
+    font-size: 2.3vw;
     padding: 1%;
     border: #344f21;
 
@@ -769,14 +716,11 @@ a:hover{background-color: #bbbec4; border:#bbbec4; border-radius: 5px }
     flex-direction: row;
     color: #344f21;
     font-size: 3vh;
-    width: 11vw;
-    min-width: 11vw;
-    max-width: 11vw;
-    min-height:4vh ;
-    max-height: 4vh;
-    height: 4vh;
+    width: 30%;
+    height:30%;
     text-align: center;
     padding: 1%;
+    vertical-align: center;
 }
 .findButton:hover{
     background-color: #71af4e;
