--- a/src/main/resources/templates/gameLobby.html
+++ b/src/main/resources/templates/gameLobby.html
@@ -38,7 +38,7 @@
     <div class="gameMain">
         <div class="gameSubMain1">
             <div class="default">Ожидают игры</div>
-            <a th:href="@{/gameLobby}" class="gameAccent">Создать игру</a>
+            <a th:href="@{/gameLobby}" class="findButton">Создать игру</a>
         </div>
         <div class="gameSubMain2">
             <div><img class="imgPlus" th:src="@{/img/normal.svg}"></div>
@@ -56,10 +56,10 @@
         </div>
         <div class="gameSubMain2">
             <div><img class="imgPlus" th:src="@{/img/rating.svg}"></div>
-            <div><img class="imgPlus" th:src="@{/img/playerAvatar1.jpg}"></div>
-            <div><img class="imgPlus" th:src="@{/img/playerAvatar2.jpg}"></div>
-            <div><img class="imgPlus" th:src="@{/img/playerAvatar3.jpg}"></div>
-            <div><img class="imgPlus" th:src="@{/img/playerAvatar4.jpg}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
         </div>
     </div>
 
