--- a/src/main/resources/templates/friends.html
+++ b/src/main/resources/templates/friends.html
@@ -44,32 +44,15 @@
     <div class="default"> Друзья </div>
     <a class="playerName">Иванов Иван</a>
   </div>
-  <div class="gameSubMain2">
-    <img class="imgPlus" th:src="@{/img/playerAvatar1.jpg}">
-    <a class="playerName"> Stasya.1t</a>
-    <div class="default">Рейтинг:100</div>
-    <div class="hiddenDelete">Удалить</div>
-  </div>
-  <div class="gameSubMain2">
-    <img class="imgPlus" th:src="@{/img/playerAvatar2.jpg}">
-    <a class="playerName"> ildarerer</a>
-    <div class="default">Рейтинг:100</div>
-    <div class="hiddenDelete">Удалить</div>
-  </div>
-  <div class="gameSubMain2">
-    <img class="imgPlus" th:src="@{/img/playerAvatar3.jpg}">
-    <a class="playerName"> Tetra</a>
-    <div class="default">Рейтинг:100</div>
-    <div class="hiddenDelete">Удалить</div>
-  </div>
-  <div class="gameSubMain2">
-    <img class="imgPlus" th:src="@{/img/playerAvatar4.jpg}">
-    <a class="playerName"> Tochnoneyura</a>
-    <div class="default">Рейтинг:100</div>
-    <div class="hiddenDelete">Удалить</div>
-  </div>
-</div>
 
+    <div class="gameSubMain2" th:each="friend: ${friendList}">
+      <img class="imgPlus" th:src="@{/img/gameLogo.png}">
+      <a class="playerName"  th:text="${friend.getName}" > Имя</a>
+      <div class="default" th:utext="${friend.getRating}">Рейтинг:100</div>
+      <div class="hiddenDelete">Удалить</div>
+    </div>
+
+</div>
 <div id="cont" class="footer">
   <div class="subFooter">
     <div class="info">Сайт разработан в учебных целях в рамках РГР по дисциплине "Технологии и методы программирования"</div>
