--- a/src/main/resources/templates/gameLobby.html
+++ b/src/main/resources/templates/gameLobby.html
@@ -61,13 +61,40 @@
             <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
             <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
         </div>
-    </div>
-
-    <div id="cont" class="footer">
-        <div class="subFooter">
-            <div class="info">Сайт разработан в учебных целях в рамках РГР по дисциплине "Технологии и методы программирования"</div>
-            <div class="info1">Разработчики Максутов Ильдар Бахмацкий Юрий Иванов Максим</div>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQinfo1" target="_blank" class="info1">Соцсети<img id="img1" th:src="@{/img/vk.png}"> </a>
+        <div class="gameSubMain2">
+            <div><img class="imgPlus" th:src="@{/img/rating.svg}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+        </div>
+        <div class="gameSubMain2">
+            <div><img class="imgPlus" th:src="@{/img/rating.svg}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+        </div>
+        <div class="gameSubMain2">
+            <div><img class="imgPlus" th:src="@{/img/rating.svg}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+        </div>
+        <div class="gameSubMain2">
+            <div><img class="imgPlus" th:src="@{/img/rating.svg}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+            <div><img class="imgPlus" th:src="@{/img/plus.png}"></div>
+        </div>
+        <div id="cont" class="footer">
+            <div class="subFooter">
+                <div class="info">Сайт разработан в учебных целях в рамках РГР по дисциплине "Технологии и методы программирования"</div>
+                <div class="info1">Разработчики Максутов Ильдар Бахмацкий Юрий Иванов Максим</div>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQinfo1" target="_blank" class="info1">Соцсети<img id="img1" th:src="@{/img/vk.png}"> </a>
+            </div>
         </div>
     </div>
 </body>
