подтверждение по почте

--- a/src/main/resources/templates/mail/test-email.html
+++ b/src/main/resources/templates/mail/test-email.html
@@ -5,7 +5,7 @@
 
 <body>
 	<p>Hello, [[${fullName}]]</p>
-	<p>This is test email for You.</p>
+	<p>This is your code [[${code}]].</p>
 	<p>Please not reply on it.</p>    
 </body>
 
